--- a/package.json
+++ b/package.json
@@ -4,7 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsnd  ./index.ts",
+    "start": "tsnd ./index.ts",
+    "debug": "tsnd --transpile-only --ignore-watch node_modules --respawn ./debug.ts",
+    "dev": "tsnd --transpile-only --ignore-watch node_modules --respawn ./index.ts"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "discord.js": "^12.5.1",
+    "knex": "^0.95.6",
+    "ts-node-dev": "^1.0.0-pre.56",
+    "typescript": "^3.9.7"
   },
   "author": "",
   "license": "ISC"
